[metadata]
name = gr_libs
version = 0.1.0  # Versioneer should handle this if configured properly
description = Package to receive goal-directed environments
author = Ben Nageris, Osher Elhadad, Matan Shamir
author_email = 
license = MIT
url = https://github.com/BenNageris/GoalRecognitionLibs/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    minigrid
    highway-env
    tensorboardX
    torchvision
    panda_gym
    rl_zoo3
    gymnasium
    gymnasium-robotics
    stable_baselines3[extra]
    sb3_contrib

[versioneer]
VCS = git
style = pep440
versionfile_source = gr_libs/_version.py
versionfile_build = gr_libs/_version.py
tag_prefix =
parentdir_prefix = gr_libs-

[options.entry_points]
# Uncomment if you need gymnasium environment registration
# gymnasium.envs =
#     __root__ = gr_libs.minigrid_scripts.__init__:register_minigrid_envs